[gd_scene load_steps=7 format=3 uid="uid://bjv0vc26spvlo"]

[ext_resource type="Script" path="res://src/player/movement/Nav.gd" id="1_ny60w"]
[ext_resource type="PackedScene" uid="uid://bqrcl6eupf720" path="res://src/models/Arrow.glb" id="2_21n0h"]
[ext_resource type="Material" uid="uid://cpwpem1i1ijdq" path="res://src/materials/orb.tres" id="3_fmbew"]
[ext_resource type="Script" path="res://src/utils/focus_observer.gd" id="3_upcnp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bu7uu"]
size = Vector3(1.00468, 2.51794, 1)

[sub_resource type="SphereMesh" id="SphereMesh_cdxob"]
material = ExtResource("3_fmbew")

[node name="Nav" type="Node3D"]
script = ExtResource("1_ny60w")

[node name="FocusObserver" type="Area3D" parent="."]
collision_layer = 3
script = ExtResource("3_upcnp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FocusObserver"]
shape = SubResource("BoxShape3D_bu7uu")

[node name="Orb" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_cdxob")

[node name="Arrow" parent="." instance=ExtResource("2_21n0h")]
transform = Transform3D(-8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 0, 0, 0, 0.2, 0.0024067, -3.30891e-09, 0.0402295)

[connection signal="focused" from="FocusObserver" to="." method="_on_focus_observer_focused"]
[connection signal="selected" from="FocusObserver" to="." method="_on_focus_observer_selected"]
[connection signal="unfocused" from="FocusObserver" to="." method="_on_focus_observer_unfocused"]
